force-app/main/default/objects/Coupon__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Enter valid Amount.</description>
    <inlineHelpText>Enter valid Amount.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>