force-app/main/default/objects/Coupon__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Flipkart</fullName>
            </value>
            <value>
                <fullName>Myntra</fullName>
            </value>
            <value>
                <fullName>Ajio</fullName>
            </value>
            <value>
                <fullName>Souled Store</fullName>
            </value>
            <value>
                <fullName>Pantaloons</fullName>
            </value>
            <value>
                <fullName>FBB</fullName>
            </value>
            <value>
                <fullName>Westside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>