force-app/main/default/objects/Coupon__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <description>Add a valid Coupon Code.</description>
    <externalId>true</externalId>
    <inlineHelpText>Add a valid Coupon Code.</inlineHelpText>
    <label>Coupon Code</label>
    <type>AutoNumber</type>
</CustomField>