force-app/main/default/objects/Coupon__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Enter valid date.</description>
    <inlineHelpText>Enter valid date.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>