force-app/main/default/objects/Coupon__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>Enter Valid Date.</description>
    <inlineHelpText>Enter Valid Date.</inlineHelpText>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>