force-app/main/default/objects/Coupon__c/fields/Redeemed_Date__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Date__c</fullName>
    <description>Enter valid Date.</description>
    <inlineHelpText>Enter valid Date.</inlineHelpText>
    <label>Redeemed Date</label>
    <type>Date</type>
</CustomField>