force-app/main/default/objects/Coupon__c/validationRules/Isuue_Date_Checker.validationRule-meta.xml
<ValidationRule>
    <fullName>Isuue_Date_Checker</fullName>
    <active>true</active>
    <description>Enter Valid Issue Date</description>
    <errorConditionFormula>Issue_Date__c  &gt;=  Expiry_Date__c</errorConditionFormula>
    <errorMessage>Please Enter Valid Issue Date. Issue date should not be ahead of expiry date.</errorMessage>
</ValidationRule>